--- a/.travis.yml
+++ b/.travis.yml
@@ -47,19 +47,25 @@ before_install:
     echo "TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST}"
     if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
         export DLOG_MODIFIED="true"  
+        export STREAM_MODIFIED="true"
         echo "Enable testing distributedlog modules since they are not pull requests."
     else
         if [ `git diff --name-only $TRAVIS_COMMIT_RANGE | grep "^stream\/distributedlog" | wc -l` -gt 0 ]; then
             export DLOG_MODIFIED="true"  
             echo "Enable testing distributedlog modules if this pull request modifies files under directory `stream/distributedlog`."
         fi
+        if [ `git diff --name-only $TRAVIS_COMMIT_RANGE | grep -v "^stream\/distributedlog" | grep "^stream\/" | wc -l` -gt 0 ]; then
+            export STREAM_MODIFIED="true"
+            echo "Enable testing distributedlog modules if this pull request modifies files under directory `stream/distributedlog`."
+        fi
     fi
 
 script:
-  - travis_retry mvn --batch-mode clean apache-rat:check compile spotbugs:check install -DskipTests
+  - travis_retry mvn --batch-mode clean apache-rat:check compile spotbugs:check install -DskipTests -Dstream
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then dev/check-binary-license ./bookkeeper-dist/all/target/bookkeeper-all-*-bin.tar.gz; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then dev/check-binary-license ./bookkeeper-dist/server/target/bookkeeper-server-*-bin.tar.gz; fi
   - if [ "$DLOG_MODIFIED" == "true" ]; then cd stream/distributedlog && travis_wait 60 mvn --batch-mode clean package -Ddistributedlog; fi
+  - if [ "$STREAM_MODIFIED" == "true" ]; then cd stream && travis_wait 60 mvn --batch-mode clean package -Dstream -DstreamTests; fi
 # Disabled the tests here. Since tests are running much slower on Travis than on Jenkins
 #  - ./dev/ticktoc.sh "mvn --batch-mode clean package"
 
