--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,8 @@
     <commons-lang3.version>3.3.2</commons-lang3.version>
     <google.code.version>3.0.2</google.code.version>
     <google.errorprone.version>2.1.2</google.errorprone.version>
-    <guava.version>20.0</guava.version>
+    <grpc.version>1.5.0</grpc.version>
+    <guava.version>21.0</guava.version>
     <hamcrest.version>1.3</hamcrest.version>
     <jcommander.version>1.48</jcommander.version>
     <jmh.version>1.19</jmh.version>
@@ -136,24 +137,85 @@
     <maven-assembly-plugin.version>2.2.1</maven-assembly-plugin.version>
   </properties>
 
+  <!-- dependency definitions -->
   <dependencyManagement>
     <dependencies>
+      <!-- logging dependencies -->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+
+      <!-- common dependencies -->
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${commons-lang3.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava.version}</version>
+      </dependency>
+
+      <!-- serialization/deserialization dependencies -->
+      <dependency>
+        <groupId>com.google.protobuf</groupId>
+        <artifactId>protobuf-java</artifactId>
+        <version>${protobuf.version}</version>
+      </dependency>
+
+      <!-- tool dependencies -->
       <dependency>
         <groupId>com.beust</groupId>
         <artifactId>jcommander</artifactId>
         <version>${jcommander.version}</version>
       </dependency>
+
+      <!-- netty dependencies -->
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-buffer</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-common</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-all</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+
+      <!-- grpc dependencies -->
+      <dependency>
+        <groupId>io.grpc</groupId>
+        <artifactId>grpc-all</artifactId>
+        <version>${grpc.version}</version>
+      </dependency>
+
+      <!-- server dependencies -->
+      <dependency>
+        <groupId>org.rocksdb</groupId>
+        <artifactId>rocksdbjni</artifactId>
+        <version>${rocksdb.version}</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
   <!-- dependencies for all modules -->
   <dependencies>
-    <!-- compilation dependencies -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
+
+    <!-- provided dependencies (available at compilation and test classpths and *NOT* packaged) -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
@@ -166,11 +228,18 @@
       <version>${spotbugs-annotations.version}</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- compilation dependencies (available at all classpaths) -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
     <dependency>
       <groupId>commons-configuration</groupId>
       <artifactId>commons-configuration</artifactId>
       <version>${commons-configuration.version}</version>
     </dependency>
+
     <!-- test dependencies -->
     <dependency>
       <groupId>junit</groupId>
@@ -178,8 +247,7 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
-    <!-- Needed by junit -->
-    <dependency>
+    <dependency><!-- Needed by junit -->
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-all</artifactId>
       <version>${hamcrest.version}</version>
@@ -316,24 +384,37 @@
         <version>0.12</version>
         <configuration>
           <excludes>
+            <!-- Git -->
             <exclude>.git/**/*</exclude>
             <exclude>.github/**/*</exclude>
-            <exclude>**/target/**/*</exclude>
+            <exclude>**/.gitignore</exclude>
+
+            <!-- SVN -->
             <exclude>**/.svn/**/*</exclude>
-            <exclude>CHANGES.txt</exclude>
+
+            <!-- Built directory -->
+            <exclude>**/target/**/*</exclude>
+
+            <!-- Project files -->
             <exclude>**/README.md</exclude>
             <exclude>**/apidocs/*</exclude>
-            <exclude>test-patch/**/*</exclude>
+            <exclude>**/src/main/resources/deps/**</exclude>
+            <exclude>**/META-INF/**</exclude>
+
+            <!-- IDE files (eclipse & intellij) -->
             <exclude>**/.classpath</exclude>
-            <exclude>**/.gitignore</exclude>
             <exclude>**/.project</exclude>
             <exclude>**/.checkstyle</exclude>
             <exclude>**/.settings/*</exclude>
             <exclude>**/*.iml</exclude>
-            <exclude>site/**</exclude>
+            <exclude>**/*.iws</exclude>
+            <exclude>**/*.ipr</exclude>
+
+            <!-- Maven (CI builds) -->
             <exclude>.repository/**</exclude>
-            <exclude>**/src/main/resources/deps/**</exclude>
-            <exclude>**/META-INF/**</exclude>
+
+            <!-- Website -->
+            <exclude>site/**</exclude>
           </excludes>
           <consoleOutput>true</consoleOutput>
         </configuration>
@@ -483,6 +564,20 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <!-- enable building table service module only when -Dstream is provided -->
+    <profile>
+      <id>stream</id>
+      <activation>
+        <property>
+          <name>stream</name>
+        </property>
+      </activation>
+      <modules>
+        <!-- enable building table service -->
+        <module>stream</module>
+      </modules>
     </profile>
   </profiles>
 </project>
