--- a/stream/tests/pom.xml
+++ b/stream/tests/pom.xml
@@ -22,8 +22,9 @@
   <parent>
     <groupId>org.apache.bookkeeper</groupId>
     <artifactId>stream-storage-parent</artifactId>
-    <version>0.6.0-SNAPSHOT</version>
+    <version>4.7.0-SNAPSHOT</version>
   </parent>
+  <groupId>org.apache.bookkeeper.tests</groupId>
   <artifactId>stream-storage-tests-parent</artifactId>
   <name>Apache BookKeeper :: Stream Storage :: Tests</name>
   <modules>
