Shade bookkeeper in distributedlog-core-shaded and allow using shaded bookkeeper client to resolve ledger manager factory class
*Motivation*

1. when `distributedlog-core-shaded` is co-used with other bookkeeper jars, it would cause class conflicts because `distributedlog-core-shaded` shades
most of its dependencies except bookkeeper. so it is better to also shade bookkeeper to avoid such conflicts.

2. if we shade bookkeeper, it would cause a problem on resolving ledger manager factory class.

*Solution*

- shade bookkeeper dependencies in `distributedlog-core-shaded`
- add flags to allow using shaded bookkeeper jar to resolve ledger manager factory

--- a/shaded/distributedlog-core-shaded/pom.xml
+++ b/shaded/distributedlog-core-shaded/pom.xml
@@ -189,8 +189,12 @@
                 </relocation>
                 <!-- bookkeeper -->
                 <relocation>
+                  <pattern>com.scurrilous.circe</pattern>
+                  <shadedPattern>dlshade.com.scurrilous.circe</shadedPattern>
+                </relocation>
+                <relocation>
                   <pattern>org.apache.bookkeeper</pattern>
-                  <shadedPattern>org.apache.bookkeeper</shadedPattern>
+                  <shadedPattern>dlshade.org.apache.bookkeeper</shadedPattern>
                 </relocation>
                 <!-- distributedlog -->
                 <relocation>
