--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ branches:
     - asf-site
     - gh-pages
 
+services:
+  - docker
+
 matrix:
   include:
     - os: osx
@@ -53,13 +56,34 @@ before_install:
             export DLOG_MODIFIED="true"  
             echo "Enable testing distributedlog modules if this pull request modifies files under directory `stream/distributedlog`."
         fi
+        if [ `git diff --name-only $TRAVIS_COMMIT_RANGE | grep "^site\/" | wc -l` -gt 0 ]; then
+            # building the website to ensure the changes don't break
+            export WEBSITE_MODIFIED="true"
+            echo "Enable building website modules if this pull request modifies files under directory `site`."
+        fi
     fi
 
 script:
-  - travis_retry mvn --batch-mode clean apache-rat:check compile spotbugs:check install -DskipTests
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then dev/check-binary-license ./bookkeeper-dist/all/target/bookkeeper-all-*-bin.tar.gz; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then dev/check-binary-license ./bookkeeper-dist/server/target/bookkeeper-server-*-bin.tar.gz; fi
-  - if [ "$DLOG_MODIFIED" == "true" ]; then cd stream/distributedlog && travis_wait 60 mvn --batch-mode clean package -Ddistributedlog; fi
+- |
+    set -e
+    mvn --batch-mode clean apache-rat:check compile spotbugs:check install -DskipTests
+    if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+        dev/check-binary-license ./bookkeeper-dist/all/target/bookkeeper-all-*-bin.tar.gz;
+        dev/check-binary-license ./bookkeeper-dist/server/target/bookkeeper-server-*-bin.tar.gz;
+    fi
+    if [ "$DLOG_MODIFIED" == "true" ]; then
+        cd stream/distributedlog
+        travis_wait 60 mvn --batch-mode clean package -Ddistributedlog
+        cd ../..
+    fi
+    if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$WEBSITE_MODIFIED" == "true" ]; then
+        cd site
+        make clean
+        # run the docker image to build the website
+        ./docker/ci.sh
+        cd ..
+    fi
+
 # Disabled the tests here. Since tests are running much slower on Travis than on Jenkins
 #  - ./dev/ticktoc.sh "mvn --batch-mode clean package"
 
