--- a/bookkeeper-http/pom.xml
+++ b/bookkeeper-http/pom.xml
@@ -16,26 +16,21 @@
    limitations under the License.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>bookkeeper</artifactId>
-        <groupId>org.apache.bookkeeper</groupId>
-        <version>4.7.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.apache.bookkeeper.http</groupId>
-    <artifactId>bookkeeper-http</artifactId>
-    <packaging>pom</packaging>
-    <name>Apache BookKeeper :: Bookkeeper Http</name>
-    <modules>
-        <module>http-server</module>
-        <module>twitter-http-server</module>
-        <module>vertx-http-server</module>
-    </modules>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    </properties>
-
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <artifactId>bookkeeper</artifactId>
+    <groupId>org.apache.bookkeeper</groupId>
+    <version>4.7.0-SNAPSHOT</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.apache.bookkeeper.http</groupId>
+  <artifactId>bookkeeper-http</artifactId>
+  <packaging>pom</packaging>
+  <name>Apache BookKeeper :: Http</name>
+  <modules>
+    <module>http-server</module>
+    <module>twitter-http-server</module>
+    <module>vertx-http-server</module>
+  </modules>
 </project>
